# ttfrev

./: .envrc  .gitignore  COPYING  README.md  flake.nix  pyproject.toml
ttfrev/formats/: cbin.py  common.py  pff.py  rtxt.py  sbf.py
ttfrev/formats/scr/: __init__.py  bytecode.py
