[tool.poetry]
name = "ttfrev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
construct = "==2.10.68"
construct-typing = "==0.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
hypothesis = "^6.46.10"
mypy = "==1.9.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
